--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,13 @@
 			<version>20240303</version>
 		</dependency>
 
+
+		<dependency>
+			<groupId>com.github.rholder</groupId>
+			<artifactId>snowball-stemmer</artifactId>
+			<version>1.3.0.581.1</version>
+		</dependency>
+
 <!--		<dependency>-->
 <!--			<groupId>org.mongodb</groupId>-->
 <!--			<artifactId>mongo-java-driver</artifactId>-->
